Fix cramped high page numbers

--- a/css/ngtable.less
+++ b/css/ngtable.less
@@ -30,8 +30,8 @@
     float: left;
     text-align: center;
     height: 32px;
-    width: 32px;
-    padding: 5px 0;
+    min-width: 22px;
+    padding: 5px;
     line-height: 32px;
     margin-right: 12px;
     border-radius: 4px;
